k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: reelmark
    namespace: reelmark
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - reelmark.silexio.be
          secretName: reelmark-tls
    rules:
        - host: reelmark.silexio.be
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: reelmark
                            port:
                                number: 80
